helm/networking/np-ingress-gateway-classes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-gateway-to-classes
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: api-gateway-microservice
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: classes-microservice
      ports:
        - port: 8080
